// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions populateFoodBanks 1`] = `
Object {
  "payload": Array [
    Object {
      "address": "1766 Industrial Way, Napa, CA 94558, USA",
      "id": "ChIJi_4gLBsmdkAROG8pXQJfljQ",
      "lat": 38.3197489,
      "lng": -122.3052978,
      "name": "Napa Food Bank",
      "phone_intl": "+1 707-253-6128",
      "phone_local": "(707) 253-6128",
    },
    Object {
      "address": "3990 Brickway Blvd, Santa Rosa, CA 95403, USA",
      "id": "ChIJL-sNQZE-hIARjAV6WJSVGH4",
      "lat": 38.513952,
      "lng": -122.792842,
      "name": "Redwood Empire Food Bank",
      "phone_intl": "+1 707-523-7900",
      "phone_local": "(707) 523-7900",
    },
    Object {
      "address": "6550 Railroad Ave, Forestville, CA 95436, USA",
      "id": "ChIJ7wNdy7Y8hIARyv8emgC-DGE",
      "lat": 38.4725772,
      "lng": -122.8908573,
      "name": "Food For Thought",
      "phone_intl": "+1 707-887-1647",
      "phone_local": "(707) 887-1647",
    },
    Object {
      "address": "2900 McBride Ln, Santa Rosa, CA 95403, USA",
      "id": "ChIJ19sz4fpHhIARuPVky_DOAws",
      "lat": 38.46553799999999,
      "lng": -122.729861,
      "name": "F.I.S.H. Food Pantry",
      "phone_intl": "+1 707-527-5151",
      "phone_local": "(707) 527-5151",
    },
    Object {
      "address": "2310 Laurel St # 1, Napa, CA 94559, USA",
      "id": "ChIJYcilHVAGhYARUeV_KxiJWAU",
      "lat": 38.29342199999999,
      "lng": -122.300276,
      "name": "Community Action of Napa Valley",
      "phone_intl": "+1 707-253-6100",
      "phone_local": "(707) 253-6100",
    },
    Object {
      "address": "500 Robinson Rd, Sebastopol, CA 95472, USA",
      "id": "ChIJKVu99qUwhIARjO1iQ_KcNMk",
      "lat": 38.3969701,
      "lng": -122.8324209,
      "name": "Inter-Church Food Pantry",
      "phone_intl": "+1 707-823-2483",
      "phone_local": "(707) 823-2483",
    },
    Object {
      "address": "PO Box 507, Sonoma, CA 95476, USA",
      "id": "ChIJxamrqgKshYARzrPtrr68QQE",
      "lat": 38.291859,
      "lng": -122.4580356,
      "name": "Fish",
      "phone_intl": "+1 707-996-0111",
      "phone_local": "(707) 996-0111",
    },
    Object {
      "address": "8987 Windsor Rd, Windsor, CA 95492, USA",
      "id": "ChIJNeXtJuU9hIAREv6pMsDshTY",
      "lat": 38.546802,
      "lng": -122.817157,
      "name": "Windsor Service Alliance",
      "phone_intl": "+1 707-838-6947",
      "phone_local": "(707) 838-6947",
    },
    Object {
      "address": "93 Stony Cir, Santa Rosa, CA 95401, USA",
      "id": "ChIJyzXBdjs4hIARidyp6emZJj0",
      "lat": 38.4398226,
      "lng": -122.7475301,
      "name": "The Salvation Army Santa Rosa",
      "phone_intl": "+1 707-542-0981",
      "phone_local": "(707) 542-0981",
    },
    Object {
      "address": "1505 Healdsburg Ave, Healdsburg, CA 95448, USA",
      "id": "ChIJTyXW48AQhIAR43uiF9ZF6cw",
      "lat": 38.629398,
      "lng": -122.8728423,
      "name": "Healdsburg Shared Ministries",
      "phone_intl": "+1 707-433-3663",
      "phone_local": "(707) 433-3663",
    },
    Object {
      "address": "1301 4th St, Napa, CA 94559, USA",
      "id": "ChIJr7b-RGgGhYARAE4exlAKef0",
      "lat": 38.2957919,
      "lng": -122.2862386,
      "name": "Community Action-Napa Valley-Hope",
      "phone_intl": "+1 707-259-8133",
      "phone_local": "(707) 259-8133",
    },
    Object {
      "address": "433 Soscol Ave a120, Napa, CA 94559, USA",
      "id": "ChIJ723YYg0GhYARoeNIKrPtL6I",
      "lat": 38.2893383,
      "lng": -122.2763325,
      "name": "The Peter and Vernice Gasser Foundation",
      "phone_intl": "+1 707-255-1646",
      "phone_local": "(707) 255-1646",
    },
    Object {
      "address": "952 Napa St, Napa, CA 94559, USA",
      "id": "ChIJ47GHmGAGhYAR6HxKM1DAxRY",
      "lat": 38.3031988,
      "lng": -122.2877404,
      "name": "Puertas Abiertas Community Resource Center",
      "phone_intl": "+1 707-224-1786",
      "phone_local": "(707) 224-1786",
    },
    Object {
      "address": "18960 County Road 75A, Brooks, CA 95606, USA",
      "id": "ChIJC26GiUvthIARHlvLE_WVQXs",
      "lat": 38.75871739999999,
      "lng": -122.1573766,
      "name": "Yocha Dehe Wintun Nation",
      "phone_intl": "+1 530-796-3400",
      "phone_local": "(530) 796-3400",
    },
    Object {
      "address": "721 S McDowell Blvd, Petaluma, CA 94954, USA",
      "id": "ChIJlx1kpOKzhYARnQKkZ4BCKWY",
      "lat": 38.24398559999999,
      "lng": -122.6155286,
      "name": "Salvation Army",
      "phone_intl": "+1 707-769-0716",
      "phone_local": "(707) 769-0716",
    },
    Object {
      "address": "1500 Petaluma Blvd S, 55 Shasta Ave, Petaluma, CA 94952, USA",
      "id": "ChIJt8nURhG0hYAReQmu2W1cNjs",
      "lat": 38.2474888,
      "lng": -122.6438765,
      "name": "Petaluma Bounty Farm",
      "phone_intl": "+1 707-775-3663",
      "phone_local": "(707) 775-3663",
    },
    Object {
      "address": "900 Hopper St, Petaluma, CA 94952, USA",
      "id": "ChIJSbCn_wC0hYAR9AuKk82MxZs",
      "lat": 38.2336867,
      "lng": -122.6234004,
      "name": "Petaluma Kitchen",
      "phone_intl": "+1 707-778-6380",
      "phone_local": "(707) 778-6380",
    },
    Object {
      "address": "1333 3rd St, Napa, CA 94559, USA",
      "id": "ChIJAzlUFGgGhYAR9o5_Qh-s_js",
      "lat": 38.2962346,
      "lng": -122.2868405,
      "name": "The Table at First Presbyterian Church",
      "phone_intl": "+1 707-224-8693",
      "phone_local": "(707) 224-8693",
    },
    Object {
      "address": "975 Corporate Center Pkwy #160, Santa Rosa, CA 95407, USA",
      "id": "ChIJ7WNkDv9HhIARHJN8scXMbY8",
      "lat": 38.424602,
      "lng": -122.7537751,
      "name": "United Way of the Wine Country",
      "phone_intl": "+1 707-528-4485",
      "phone_local": "(707) 528-4485",
    },
    Object {
      "address": "1907 Novato Blvd, Novato, CA 94947, USA",
      "id": "ChIJz-HsV5u7hYARu5tVzF82kPU",
      "lat": 38.1099728,
      "lng": -122.5883525,
      "name": "Human Needs Center of Novato",
      "phone_intl": "+1 415-897-4147",
      "phone_local": "(415) 897-4147",
    },
  ],
  "type": "POPULATE_FOOD_BANKS",
}
`;

exports[`actions populateSNAP 1`] = `
Object {
  "payload": Array [
    Object {
      "address": "2550 Paulin Dr # 1, Santa Rosa, CA 95403, USA",
      "id": "ChIJWcnjX3c4hIAReEaEIu-h5Dg",
      "lat": 38.464769,
      "lng": -122.721573,
      "name": "Sonoma County Human Services Department",
      "phone_intl": "+1 877-699-6868",
      "phone_local": "(877) 699-6868",
    },
    Object {
      "address": "520 Mendocino Ave, Santa Rosa, CA 95402, USA",
      "id": "ChIJ2S8f1PhHhIARUVCsEnyrOEw",
      "lat": 38.443262,
      "lng": -122.715587,
      "name": "Sonoma County Economic Assistance 2",
      "phone_intl": "+1 877-699-6868",
      "phone_local": "(877) 699-6868",
    },
  ],
  "type": "POPULATE_SNAP_OFFICES",
}
`;

exports[`actions populateWIC 1`] = `
Object {
  "payload": Array [
    Object {
      "address": "11 English St, Petaluma, CA 94952, USA",
      "id": "ChIJ697sM6e2hYARGih3Xt7SAAE",
      "lat": 38.2319379,
      "lng": -122.6442755,
      "name": "WIC Petaluma",
      "phone_intl": "+1 800-816-3663",
      "phone_local": "(800) 816-3663",
    },
    Object {
      "address": "153 Stony Cir #100, Santa Rosa, CA 95401, USA",
      "id": "ChIJ8RLqxDw4hIARCChYAI7Tp20",
      "lat": 38.439528,
      "lng": -122.7437988,
      "name": "Volunteer Center of Sonoma County",
      "phone_intl": "+1 707-573-3399",
      "phone_local": "(707) 573-3399",
    },
    Object {
      "address": "1530 Solano Ave, Vallejo, CA 94590, USA",
      "id": "ChIJD2NWug1zhYARmELjE9P_loU",
      "lat": 38.1016731,
      "lng": -122.2390356,
      "name": "Prime Time Nutrition",
      "phone_intl": "+1 707-644-6600",
      "phone_local": "(707) 644-6600",
    },
    Object {
      "address": "8465 Old Redwood Hwy #320, Windsor, CA 95492, USA",
      "id": "ChIJ24DSyww-hIAROpzUsj2K5Zs",
      "lat": 38.5431579,
      "lng": -122.8017116,
      "name": "Alliance Medical Center",
      "phone_intl": "+1 707-433-5494",
      "phone_local": "(707) 433-5494",
    },
    Object {
      "address": "210 Hospital Dr, Vallejo, CA 94589, USA",
      "id": "ChIJy1-q0DRzhYARuIqXldjxVYw",
      "lat": 38.13150350000001,
      "lng": -122.2387657,
      "name": "La Clinica Vallejo Great Begin",
      "phone_intl": "+1 707-645-7316",
      "phone_local": "(707) 645-7316",
    },
  ],
  "type": "POPULATE_WIC_OFFICES",
}
`;

exports[`actions populateWICVendors 1`] = `
Object {
  "payload": Array [
    Object {
      "address": "2751 4th St, Santa Rosa, CA,  95404, USA",
      "id": "ChIJZ1aAHdxHhIARO2o8VNCrzvo",
      "lat": 38.450691,
      "lng": -122.69104,
      "name": "Safeway #1562",
    },
    Object {
      "address": "1680 Petaluma Hill Rd, Santa Rosa, CA,  95404, USA",
      "id": "ChIJD2VCHBhIhIAR-pleXyzr54s",
      "lat": 38.42281,
      "lng": -122.70693,
      "name": "Lola's Market",
    },
  ],
  "type": "POPULATE_WIC_VENDORS",
}
`;

exports[`actions setLanguagePreference 1`] = `
Object {
  "payload": "es",
  "type": "SET_LANGUAGE_PREFERENCE",
}
`;

exports[`actions toggleLocationProvided 1`] = `
Object {
  "payload": true,
  "type": "TOGGLE_LOCATION_PROVIDED",
}
`;

exports[`actions updateLocation 1`] = `
Object {
  "payload": Object {
    "latitude": 38.5386881,
    "latitudeDelta": 0.4,
    "longitude": -122.695547,
    "longitudeDelta": 0.4,
  },
  "type": "UPDATE_LOCATION",
}
`;

exports[`actions updateMapLoading 1`] = `
Object {
  "payload": false,
  "type": "TOGGLE_MAP_LOADING",
}
`;

exports[`actions updateOffice 1`] = `
Object {
  "payload": 1,
  "type": "UPDATE_OFFICE",
}
`;

exports[`actions updateOrientation 1`] = `
Object {
  "payload": Object {
    "fontScale": 1,
    "height": 683.4285714285714,
    "scale": 2.625,
    "width": 411.42857142857144,
  },
  "type": "UPDATE_ORIENTATION",
}
`;

exports[`actions updateWicEligibility 1`] = `
Object {
  "payload": 1,
  "type": "UPDATE_WIC_ELIGIBILITY",
}
`;

exports[`actions updateZipCode 1`] = `
Object {
  "payload": 95404,
  "type": "UPDATE_ZIP_CODE",
}
`;
